# z-wordcloud

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  wrangler.jsonc
.github/workflows/: pake-release.yml  tauri-release.yml
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src/components/: SettingsPanel.vue  TagInput.vue  WordCloudCanvas.vue  WordFreqList.vue
src/data/: colorSchemes.ts  stopwords.ts
src/types/: index.ts  jieba-wasm.d.ts  wordcloud2.d.ts
src/utils/: freqHelpers.ts  segmenter.ts  svgExport.ts
