[package]
name = "wordcloud"
version = "0.0.0"
description = "词云即刻 - 在线词云生成器"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
